Delete API of keypoints,models and scores per user
